--- a/map/AndroidManifest.xml
+++ b/map/AndroidManifest.xml
@@ -10,13 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <meta-data  
 	        android:name="com.baidu.lbsapi.API_KEY"  
-	        android:value="OVaFxglsar6CG8VjGZEbtPLg" /> 
+	        android:value="xGeTWaGxjplydr8YAo8h7f02" /> 
 	        
         <activity
             android:name="com.jackie.map.MainActivity"
