--- a/map/AndroidManifest.xml
+++ b/map/AndroidManifest.xml
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.jackie.map.MapInfoActivity"></activity>
         
         <service
             android:name="com.baidu.location.f"
