增加POI兴趣检索功能

--- a/map/AndroidManifest.xml
+++ b/map/AndroidManifest.xml
@@ -21,14 +21,22 @@
         <activity
             android:name="com.jackie.map.MainActivity"
             android:label="@string/app_name" >
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+        <activity android:name="com.jackie.map.MapInfoActivity"></activity>
+        <activity android:name="com.jackie.map.BaseMapActivity"></activity>
+        <activity android:name="com.jackie.map.PoiSearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.jackie.map.MapInfoActivity"></activity>
-        <activity android:name="com.jackie.map.BaseMapActivity"></activity>
+        
         
         <service
             android:name="com.baidu.location.f"
